test/corpus/comments.txt
==================
Block, inline and special comments
==================

/* Multiline
Block comment
*/

/*
  * Asterisk inside block comment
*/

/*
* Line comment inside block comment
*/

$ENTRY GO {
  /* block comment inside pattern */ = /* block comment inside result */;
}

* Inline comment
*Another Inline comment

*$FROM Special Comment

---
(program
  (block_comment)
  (block_comment)
  (block_comment)
  (function
    scope: (entry_directive)
    name: (identifier)
    (block_comment)
    sentences: (sentences
      (sentence
        return: (return))
      (block_comment)))
  (line_comment)
  (line_comment)
  (special_comment))
