test/corpus/compound.txt
==================
Compound symbols
==================

$ENTRY GO { = ":-)" }

---

(program
  (function
    scope: (entry_directive)
    name: (identifier)
    sentences: (sentences
      (sentence
        return: (return
          result: (result
            (symbol
              (compound))))))))
